--- a/desktop/package.json
+++ b/desktop/package.json
@@ -1,10 +1,10 @@
 {
   "name": "hello",
-  "main": "index.html",
+  "main": "login.html",
+  "chromium-args" : "--disable-web-security",
   "window": {
     "toolbar": false,
     "width": 800,
-    "height": 600,
-    "frame": false
+    "height": 600
   }
 }
