Added passport dependency
Added passport.js to package.json. Beginning work on authenication for teachers and students through local, Facebook, Twitter, Google+.

--- a/framework/package.json
+++ b/framework/package.json
@@ -23,6 +23,7 @@
 		"serve-favicon": "*",
 		"express-error-handler": "*",
 		"express-logger": "*",
-		"body-parser": "*"
+		"body-parser": "*",
+		"passport": "*"
 	}
 }
